tests/files/lexer_tests/should_fail/081.cmdr
//Should not lex since missing close paren no variable
fn hi( hi;